JNI: fix crash on java applications

Some pointers were not being cast correctly causing
g_hash_tables to produce garbage. This has been
addressed by creating two macros and using glib
macros to cast types with.

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=698095